...
        SwitchPref(
            state,
            "extra_status_line",
            context.getString(R.string.extra_status_line),
            default = false,
            subtitle = context.getString(R.string.additional_text_status),
            tag = "setting_extra_status_line"
        )
        SwitchPref(
            state,
            "extra_status_stats_24h",
            context.getString(R.string.sliding_24_hour_window),
            default = false,
...
            onSelected = { newValue ->
                PluggableCalibration.invalidateCache()
                PluggableCalibration.invalidateCache(newValue)
                PluggableCalibration.invalidatePluginCache()
                state.setString("current_calibration_plugin", newValue)
            },
            modifier = Modifier.testTag("setting_calibration_plugin"),
            subtitle = context.getString(R.string.experimental_calibration_plugin),
        )
        SwitchPref(
            state,
            "plugin_plot_on_graph",
            context.getString(R.string.plugin_plot_on_graph),
...
            SwitchPref(
                state,
                "external_blukon_algorithm",
                context.getString(R.string.use_external_blukon_algorithm),
                default = false,
                subtitle = context.getString(R.string.use_external_blukon_algorithm_summary),
                tag = "setting_external_blukon_algorithm",
            )
            SwitchPref(
                state,
                "retrieve_blukon_history",
                context.getString(R.string.retrieve_blukon_history_title),
                default = false,
                subtitle = context.getString(R.string.retrieve_blukon_history_summary),
                enabled = !state.bool("external_blukon_algorithm", false),
                tag = "setting_retrieve_blukon_history",
            )
        }
        if (hardwareLibre) {
            SwitchPref(
                state,
                "detect_libre_sn_changes",
                "Check Libre Serial",
                default = true,
                subtitle = "Automatically stop if Libre serial changes unexpectedly",
                tag = "setting_libre_sn_changes",
            )
        }
        if (ct == DexCollectionType.LimiTTer) {
            SwitchPref(
                state,
                "use_non_fixed_li_parameters",
                context.getString(R.string.title_Non_fixed_Libre_slopes),
                default = true,
                subtitle = context.getString(R.string.summary_Enable_to_allow_variable_slopes_with_Libre_collection_methods),
                tag = "setting_non_fixed_li_parameters",
            )
        }
        if (ct == DexCollectionType.LibreAlarm) {
            SwitchPref(
                state,
                "libre_use_smoothed_data",
                context.getString(R.string.libre_use_smoothed_data_title),
                default = false,
                subtitle = context.getString(R.string.libre_use_smoothed_data_summary),
                tag = "setting_libre_smoothed_data",
            )
        }
        if (libreReceiver) {
            ListPref(
                state,
                "calibrate_external_libre_2_algorithm_type",
...
            SwitchPref(
                state,
                "libre_one_minute",
                context.getString(R.string.title_libre_one_minute_interval),
                default = false,
                subtitle = context.getString(R.string.summary_libre_one_minute_interval),
                tag = "setting_libre_one_minute",
            )
            SwitchPref(
                state,
                "Libre2_showRawGraph",
                context.getString(R.string.title_Lib2_show_raw_values),
                default = false,
...
