...
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_calibration_check_in">Calibration Activity</string>
    <string name="title_activity_usb_connected">USB Connected Activity</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_hint">Snooze alert for x minutes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="pref_sensor_location_dont_ask_again">Don\'t ask me that again</string>

    <string name="title_activity_error">"Error and Event List"</string>
    <string name="title_activity_main">Main Activity</string>
...
    <string name="show_settings_qr_codes">Show Settings QR codes</string>
    <string name="load_save_settings_to_sdcard">Load / Save settings</string>
    <string name="alarms_and_alerts">Alarms and Alerts</string>
    <string name="alerts_and_notifications">Alerts and Notifications</string>
    <string name="glucose_level_alerts_list">Glucose Level Alerts List</string>
    <string name="glucose_alerts_settings">Glucose Alerts Settings</string>
    <string name="smart_snoozing">Smart Snoozing</string>
    <string name="calibration_alerts">Calibration Alerts</string>
    <string name="missed_reading_alert">Missed reading Alert</string>
    <string name="other_alerts">Other Alerts</string>
    <string name="extra_alerts_xdrip_plus">Extra Alerts (xDrip)</string>
    <string name="persistent_high_alert">Persistent High Alert</string>
    <string name="persistent_high_alert_enable">Enable</string>
    <string name="title_persistent_high_threshold">Threshold</string>
...
    <string name="notify_when_predicted_low_time_reaches_threshold">Notify when forecasted low time reaches time threshold</string>
    <string name="predicted_low_sound">Alert Sound</string>
    <string name="choose_sound_used_for_predicted_low_alarm">Choose the sound used for the alarm.</string>
    <string name="silent_alert_when_charging">Silent alert when charging</string>
    <string name="alerts_start_out_snoozed_and_must_persist_for_a_while">Alerts start out snoozed and must persist for a while to actually trigger</string>
    <string name="alarms_silenced_during_telephone_calls">Alarms silenced during telephone calls</string>
    <string name="suppress_alerts_if_missed_readings">Suppress Alerts if missed readings</string>
    <string name="bad_noisy_value_alerts">Bad (noisy) Value Alerts</string>
    <string name="keep_snoozing_if_glucose_is_heading_in_right_direction">Keep snoozing if glucose is heading in the right direction</string>
    <string name="dont_alert_if_glucose_in_right_direction">Don\'t alert if glucose is heading in the right direction</string>
    <string name="calibration_request_sound">Calibration Request Sound</string>
    <string name="display_filtered_line">Display filtered line</string>
    <string name="show_tiny_dots_instead">Show Tiny dots instead of Small dots on the graph</string>
...
    <string name="manage_permissions">Manage permissions</string>
    <string name="open_health_connect_settings_to_manually_manage_permissions">Open Health Connect Settings to manually manage permissions</string>
    <string name="send_data_to_health_connect">Send data to Health Connect</string>
    <string name="get_data_from_health_connect">Get data from Health Connect</string>
    <string name="requires_android_8_and_google_companion_application_or_android_14">Requires Android 8+ and Google companion application or Android 14+</string>
    <string name="send_and_receive_data_from_google_health_connect_and_google_fit">Send and receive data from Google Health Connect and Google Fit</string>
    <string name="google_health_connect">Google Health Connect</string>
    <string name="google_health_connect_needs_perms">ERROR: Health connect needs permissions! - try from settings menu again</string>
    <string name="carelink_auth_country_required">Country is required!</string>
    <string name="carelink_auth_status_authenticated">Authenticated status!</string>
    <string name="carelink_auth_status_not_authenticated">Not authenticated status!</string>
    <string name="carelink_auth_login_in_progress">Login in progress...</string>
    <string name="carelink_refresh_token_start">Start access renewal</string>
...
    <string name="reraise_alerts_before_snooze_time">Reraise alerts before snooze time</string>
    <string name="alert_reraise_time_colon">Alert Reraise time:</string>
    <string name="select_start_time">Select start time</string>
    <string name="select_end_time">Select end time</string>
    <string name="accept_glucose">Accept Glucose</string>
    <string name="process_glucose_data_received">Process glucose data received from NSClient app</string>
    <string name="use_health_connect">Use Health Connect</string>
    <string name="audio_focus">Audio Focus</string>
    <string name="audio_focus_summary">Choose what to do with other apps while playing alerts and adjusting system volume levels</string>
    <string name="audio_focus_dont_adjust_other_app_sounds">Don\'t adjust other app sounds</string>
    <string name="audio_focus_lower_volume_of_other_apps">Lower volume of other apps</string>
    <string name="audio_focus_pause_other_apps_playing_audio">Pause other apps playing audio</string>
    <string name="audio_focus_pause_all_other_sounds">Pause all other sounds</string>
...
    <string name="theme_colors_summary">Override any colour; defaults follow Material You</string>
    <string name="theme_group_chrome">App colours</string>
    <string name="theme_group_data">Data and chart colours</string>
    <string name="theme_custom">Custom</string>
    <string name="theme_reset_all">Reset all theme colours</string>
    <string name="theme_reset_all_done">All theme colours reset to Material You</string>
    <string name="theme_reset_default">Use Material You default</string>
    <string name="theme_role_primary">Primary</string>
    <string name="theme_role_on_primary">On primary</string>
    <string name="theme_role_primary_container">Primary container</string>
    <string name="theme_role_on_primary_container">On primary container</string>
    <string name="theme_role_inverse_primary">Inverse primary</string>
    <string name="theme_role_secondary">Secondary</string>
...
